--- a/.github/workflows/build-python-uefi-gcc.yaml
+++ b/.github/workflows/build-python-uefi-gcc.yaml
@@ -16,6 +16,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Print Ubuntu version
+      run: lsb_release -a
+
     - name: Setup Python
       uses: actions/setup-python@v5
       with:
